--- a/manuscript_examples.Rmd
+++ b/manuscript_examples.Rmd
@@ -93,8 +93,7 @@ colData(rse.mus)[1:3, ]
 A targets file is loaded to the `colData` slot of `rse.mus`.  
 
 ```{r eval=TRUE, echo=TRUE, collapse=TRUE}
-mus.tar <- system.file('extdata/shinyApp/data/target_mouse.txt', package='spatialHeatmap')
-target.mus <- read.table(mus.tar, header=TRUE, row.names=1, sep='\t') # Importing
+target.mus <- read.table('data/target_mouse.txt', header=TRUE, row.names=1, sep='\t') # Importing
 colData(rse.mus) <- DataFrame(target.mus) # Loading
 target.mus[1:3, ]
 ```
@@ -140,18 +139,15 @@ dn.liver <- subset(rowData(en.liver), type=='down' & total==4)
 dn.liver[1:3, 1:3]
 ```
 
-The mouse brain aSVG is imported.   
+The aSVG of mouse organs is imported.   
 
 ```{r eval=TRUE, echo=TRUE, collapse=TRUE, results='hide'}
-svg.mus.pa <- system.file("extdata/shinyApp/data", "mus_musculus.male.svg", package="spatialHeatmap")
-svg.mus <- read_svg(svg.mus.pa)
-cord <- svg.mus[, 2][[1]]; cord[1, 4] <- 0
-attribute(svg.mus)[[1]] <- cord
+svg.mus <- read_svg('img/mus_musculus.male.svg')
 ```
 
 One enriched (Itih1) and one depleted (Mgat3) gene in mouse liver are chosen to plot enrichment spatial heatmaps (SHMs).   
 
-```{r enr, eval=TRUE, echo=TRUE, warnings=FALSE, fig.wide=TRUE, fig.cap=('Enrichment SHMs. Top row: SHMs of spatially-enriched gene. Bottom row: SHMs of spatially-depleted gene.'), out.width="100%", fig.show='show'}
+```{r enr, eval=TRUE, echo=TRUE, warnings=FALSE, fig.wide=TRUE, fig.cap=('Enrichment SHMs. Top row: SHMs of spatially-enriched gene. Bottom row: SHMs of spatially-depleted gene.'), out.width="100%", fig.show='show', results='hide'}
 # Aggregate replicates across spatial features by mean.
 en.liver <- aggr_rep(en.liver, sam.factor='com.by', con.factor=NULL, aggr='mean')
 dat.enrich <- SPHM(svg=svg.mus, bulk=en.liver)
@@ -300,7 +296,7 @@ barplot(go, showCategory=5)
 
 SHM plotting is used to inspect the spatial expression patterns of the genes in the 'Grik3' cluster (Figure \@ref(fig:shmuse)). The results indicate that the genes of the 'Grik3' cluster are higher expressed in brain than other tissues. In addition, six of these genes are also relatively high expressed in liver tissue. In contrast to this, all other genes of the same cluster are exclusively enriched in brain. For clearity, two representative genes 'Stx1b' and 'Grik3' are shown in Figure \@ref(fig:shmuse).  
 
-```{r shmuse, eval=TRUE, echo=TRUE, warnings=FALSE, fig.wide=TRUE, fig.cap=('Spatial heatmaps in the use case.'), out.width="100%", fig.show='show'}
+```{r shmuse, eval=TRUE, echo=TRUE, warnings=FALSE, fig.wide=TRUE, fig.cap=('Spatial heatmaps in the use case.'), out.width="100%", fig.show='show', results='hide'}
 # Aggregate replicates across spatial features by mean.
 en.brain <- aggr_rep(en.brain, sam.factor='com.by', con.factor=NULL, aggr='mean')
 dat.enrich <- SPHM(svg=svg.mus, bulk=en.brain)
@@ -331,7 +327,7 @@ sc.mus.brain[1:3, 1:5]
 Import the aSVG of mouse brain.  
 
 ```{r eval=TRUE, echo=TRUE, collapse=TRUE, results='hide'}
-svg.mus.brain <- read_svg(system.file("extdata/shinyApp/data", "mus_musculus.brain.svg", package="spatialHeatmap"))
+svg.mus.brain <- read_svg("img/mus_musculus.brain.svg")
 ```
 
 ```{r eval=TRUE, echo=TRUE, collapse=TRUE, results='show'}
